fix nav bar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -262,14 +262,19 @@ nav > .favorites-active-link {
   }
 
   nav > .home,
-  .favorites {
-    width: 100px;
+  nav > .favorites {
+    width: 90px;
     font-size: .8rem;
+    padding: 10px 5px;
+    /* background-color: transparent; */
   }
 
   nav > .home-active-link,
   nav > .favorites-active-link {
-    /* transform: scale(0.8); */
+    /* transform: scale(0.9); */
+    width: 100px;
     font-size: .9rem;
+    padding: 10px 5px;
+    /* background-color: transparent; */
   }
 }
